<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2" >

        <fragment
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/map_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            class="com.TwentyCodes.android.IOIOTruck.MapFragment" >

            <!-- Preview: layout=@layout/map_fragment -->
        </fragment>

        <TextView
            android:id="@+id/accuracy_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:textColor="#FF0000" />

        <TextView
            android:id="@+id/time_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/accuracy_textview"
            android:textColor="#FF0000" />

        <ImageButton
            android:id="@+id/mark_my_lcoation_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/mark_my_location_action_bar" />

        <ImageButton
            android:id="@+id/my_location_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/mark_my_lcoation_button"
            android:layout_alignParentRight="true"
            android:src="@drawable/my_location_action_bar" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Switch
            android:id="@+id/scrolling_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dip"
            android:checked="true"
            android:text="@string/scrolling" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/log_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

    <Button
        android:id="@+id/go_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go" />

</LinearLayout>